--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>GitHub Pages</title>
+    <link rel="icon" type="image/x-icon" href="http://pages.github.com/favicon.ico" />
+    <link type="text/css" href="http://pages.github.com/css/pages.css" media="all" rel="stylesheet">
+  </head>
 <body>
 <h1>Snjo's repos</h1>
 <p>No content</p>
+
+  <ul class="tabs">
+    <li><a href="#user-site" class="selected">Download Firespitter</a></li>
+    <li><a href="#project-site">Download plugin</a></li>
+	<li><a href="#project-site">Source code</a></li>
+  </ul>
 </body>
 </html>
