--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
     <link type="text/css" href="http://pages.github.com/css/pages.css" media="all" rel="stylesheet">
   </head>
 <body>
-<h1>Snjo's repos</h1>
-<p>No content</p>
+<section id="hero-spot" class="hero-spot">
+    <a href="/"><img src="/images/logo.svg" alt="GitHub Pages" class="logo" /></a>
+
+    <h1>Code and KSP mods by Snjo</h1>    
+	
+    <a href="https://github.com/snjo/" class="help-link">github</a>
+</section>
+
+<section id="download" class="download">
+  <h1>Roll vanilla, or generate a site for your project to quickly get started.</h1>
+  <h2>You get one site per GitHub account and organization, <br />and unlimited project sites. Ready? Let’s get started.</h2>
 
   <ul class="tabs">
-    <li><a href="#user-site" class="selected">Download Firespitter</a></li>
-    <li><a href="#project-site">Download plugin</a></li>
-	<li><a href="#project-site">Source code</a></li>
+    <li><a href="https://github.com/snjo/Firespitter/releases/latest" class="selected">Download Firespitter</a></li>
+    <li><a href="https://github.com/snjo/Firespitter/blob/master/For%20release/Firespitter/Plugins/Firespitter.dll?raw=true">Download plugin</a></li>
+	<li><a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">Source code</a></li>
   </ul>
+</section>
+
 </body>
 </html>
