corrected mod title

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <link rel="icon" type="image/x-icon" href="http://pages.github.com/favicon.ico" />
     <link type="text/css" href="http://pages.github.com/css/pages.css" media="all" rel="stylesheet">
   </head>
-<body>
-<section id="hero-spot" class="hero-spot">
-    <a href="/"><img src="/images/logo.svg" alt="GitHub Pages" class="logo" /></a>
+<body class = "home">
+<section id="hero-spot" class="hero-spot">    
 
     <h1>Code and KSP mods by Snjo</h1>    
 	
@@ -16,8 +15,8 @@
 </section>
 
 <section id="download" class="download">
-  <h1>Roll vanilla, or generate a site for your project to quickly get started.</h1>
-  <h2>You get one site per GitHub account and organization, <br />and unlimited project sites. Ready? Let’s get started.</h2>
+  <h1>Firespitter</h1>
+  <h2>Propeller plane and helicopter parts for Kerbal Space Program. Feature rich plugin used in numerous mods.</h2>
 
   <ul class="tabs">
     <li><a href="https://github.com/snjo/Firespitter/releases/latest" class="selected">Download Firespitter</a></li>
