--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>GitHub Pages</title>
     <link rel="icon" type="image/x-icon" href="http://pages.github.com/favicon.ico" />
     <link type="text/css" href="http://pages.github.com/css/pages.css" media="all" rel="stylesheet">
+	<link type="text/css" href="style.css" media="all" rel="stylesheet">
   </head>
 <body class = "home">
 <section id="hero-spot" class="hero-spot">    
