filled in sections

--- a/index.html
+++ b/index.html
@@ -17,12 +17,28 @@
 
 <section id="download" class="download">
   <h1>Firespitter</h1>
-  <h2>Propeller plane and helicopter parts for Kerbal Space Program. Feature rich plugin used in numerous mods.</h2>
+  <h3>Propeller plane and helicopter parts for Kerbal Space Program. Feature rich plugin used in numerous mods.</h3>
 
   <ul class="tabs">
     <li><a href="https://github.com/snjo/Firespitter/releases/latest" class="selected">Download Firespitter</a></li>
     <li><a href="https://github.com/snjo/Firespitter/blob/master/For%20release/Firespitter/Plugins/Firespitter.dll?raw=true">Download plugin</a></li>
 	<li><a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">Source code</a></li>
+  </ul>
+  
+  <ul id="user-site" class="tutorial-list wrapper active">
+    <li id="fsguide" class="image-right">
+      <h4>The parts guide</h4>
+      <p>For instructions on using the special features of the parts, check <a href="http://tiny.cc/fsguide">the guide</a></p>      
+    </li>
+	<li id="none">
+      <h4>Links</h4>
+	  <p>Discuss the mod in the <a href="http://forum.kerbalspaceprogram.com/showthread.php/24551-Firespitter">forum thread</a>.</p>
+      <p>The mod is also hosted on curseforge. Download the <a href="http://kerbal.curseforge.com/parts/220252-firespitter">latest official version</a> there.</p>
+    </li>
+	<li id="none">
+      <h4>Modder information</h4>
+      <p>Documentation for the cfg file values for the most popular modules is <a href="http://tiny.cc/fsdoc">available here</a>. There are many other modules though. If you need documentation on those, ask in the forum thread.</p>
+    </li>
   </ul>
 </section>
 
