more custom css

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 	<li><a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">Source code</a></li>
   </ul>
   
-  <ul id="user-site" class="tutorial-list wrapper active">
+  <ul id="user-site" class="info-list wrapper active">
     <li id="fsguide" class="image-right">
       <h4>The parts guide</h4>
       <p>For instructions on using the special features of the parts, check <a href="http://tiny.cc/fsguide">the guide</a></p>      
     </li>
-	<li id="none">
+	<li class="nonumber">
       <h4>Links</h4>
 	  <p>Discuss the mod in the <a href="http://forum.kerbalspaceprogram.com/showthread.php/24551-Firespitter">forum thread</a>.</p>
       <p>The mod is also hosted on curseforge. Download the <a href="http://kerbal.curseforge.com/parts/220252-firespitter">latest official version</a> there.</p>
