--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>GitHub Pages</title>
+    <title>Firespitter and other mods by Snjo</title>
     <link rel="icon" type="image/x-icon" href="http://pages.github.com/favicon.ico" />
     <link type="text/css" href="http://pages.github.com/css/pages.css" media="all" rel="stylesheet">
 	<link type="text/css" href="style.css" media="all" rel="stylesheet">
@@ -19,11 +19,22 @@
   <h1>Firespitter</h1>
   <h3>Propeller plane and helicopter parts for Kerbal Space Program. Feature rich plugin used in numerous mods.</h3>
 
+  <br/>
+  <br/>
+  
   <ul class="tabs">
     <li><a href="https://github.com/snjo/Firespitter/releases/latest" class="selected">Download Firespitter</a></li>
-    <li><a href="https://github.com/snjo/Firespitter/blob/master/For%20release/Firespitter/Plugins/Firespitter.dll?raw=true">Download plugin</a></li>
+    <li><a href="https://github.com/snjo/Firespitter/blob/master/For%20release/Firespitter/Plugins/Firespitter.dll?raw=true">Download plugin</a></li>	
+	<li><a href="http://tiny.cc/fsguide">Guide</a></li>	
+  </ul>
+  <br/>
+  <ul class="tabs">
+    <li><a href="https://github.com/snjo/Firespitter/releases">Pre-releases and older versions</a></li>
 	<li><a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">Source code</a></li>
   </ul>
+
+  <br/>
+  <br/>
   
   <ul id="user-site" class="info-list wrapper active">
     <li id="fsguide" class="image-right">
