more content, videos

--- a/index.html
+++ b/index.html
@@ -41,14 +41,25 @@
       <h4>The parts guide</h4>
       <p>For instructions on using the special features of the parts, check <a href="http://tiny.cc/fsguide">the guide</a></p>      
     </li>
-	<li class="nonumber">
+	<li>
       <h4>Links</h4>
 	  <p>Discuss the mod in the <a href="http://forum.kerbalspaceprogram.com/showthread.php/24551-Firespitter">forum thread</a>.</p>
       <p>The mod is also hosted on curseforge. Download the <a href="http://kerbal.curseforge.com/parts/220252-firespitter">latest official version</a> there.</p>
     </li>
-	<li id="none">
+	<li>
+      <h4>Media</h4>
+	  <iframe width="560" height="315" src="http://www.youtube.com/embed/mhYmNTkQylM" frameborder="0" allowfullscreen></iframe>
+	  <iframe width="560" height="315" src="http://www.youtube.com/embed/yJRpWStq9MY" frameborder="0" allowfullscreen></iframe>
+    </li>
+	<li>
       <h4>Modder information</h4>
       <p>Documentation for the cfg file values for the most popular modules is <a href="http://tiny.cc/fsdoc">available here</a>. There are many other modules though. If you need documentation on those, ask in the forum thread.</p>
+	  
+	  <h4>Issues</h4>
+	  <p>Post bugs, code feature requests or pull requests to the <a href="https://github.com/snjo/Firespitter/issues?state=open">issues database</a>.</p>
+	  
+	  <h4>Source code</h4>
+	  <p>Available on <a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">github</a>.</p>
     </li>
   </ul>
 </section>
