added hangar extender section

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 	<link type="text/css" href="style.css" media="all" rel="stylesheet">
   </head>
 <body class = "home">
-<section id="hero-spot" class="hero-spot">    
+<!--<a name = "headeranchor">-->
+<section id="header">    	
 
-    <h1>Code and KSP mods by Snjo</h1>    
-	
-    <a href="https://github.com/snjo/" class="help-link">github</a>
+    <a href="#firespitter" class="selected first">Firespitter</a>	
+    <a href="#hangarextender" class="last">Hangar Extender</a>	
+	<!--<a href="something" class="last">Persistent Trails</a>-->
+
 </section>
 
-<section id="download" class="download">
+<a name = "firespitter">
+<section id="content">
   <h1>Firespitter</h1>
+  <a href="#header" class="navbutton">top</a>
   <h3>Propeller plane and helicopter parts for Kerbal Space Program. Feature rich plugin used in numerous mods.</h3>
 
   <br/>
@@ -33,8 +37,7 @@
 	<li><a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">Source code</a></li>
   </ul>
 
-  <br/>
-  <br/>
+  <div class="spacer">&nbsp;</div>
   
   <ul id="user-site" class="info-list wrapper active">
     <li id="fsguide" class="image-right">
@@ -48,6 +51,7 @@
     </li>
 	<li>
       <h4>Media</h4>
+	  <div class="spacer">&nbsp;</div>
 	  <iframe width="560" height="315" src="http://www.youtube.com/embed/mhYmNTkQylM" frameborder="0" allowfullscreen></iframe>
 	  <iframe width="560" height="315" src="http://www.youtube.com/embed/yJRpWStq9MY" frameborder="0" allowfullscreen></iframe>
     </li>
@@ -62,6 +66,36 @@
 	  <p>Available on <a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">github</a>.</p>
     </li>
   </ul>
+</section>
+
+<a name = "hangarextender">
+<section id="content">
+<h1>Hangar Extender</h1>
+  <a href="#header" class="navbutton">top</a>
+  <h3>Build bigger planes and rockets with a larger hangar</h3>
+
+  <div class="spacer">&nbsp;</div>
+  
+  <ul class="tabs">
+    <li><a href="https://github.com/snjo/FShangarExtender/releases/latest" class="selected">Download from github</a></li>
+    <li><a href="http://kerbal.curseforge.com/ksp-mods/220250-hangar-extender">Download from curseforge</a></li>
+	<li><a href="https://github.com/snjo/FShangarExtender/tree/master/FShangarExtender">Source</a></li>
+  </ul>
+  
+  <ul id="user-site" class="info-list wrapper active">
+    <li>      
+      <p>This plugin extends the usable area when building in the SPH or VAB, so you can build outside or above the building. Useful for building large aircraft carriers or tall rockets.
+InfiniteDice’s Boat Parts mod has it’s own version of this module, so you will not need this f you are also using his mod.</p>
+<p>
+If you need a bigger model of the SPH, press Numpad * to scale it up x5.
+There is no building scaling in the VAB yet, but the work area is of course extended there as well.</p>
+<p>
+This mod also extends the work/camera area if you are using a 6DOF device (Space Navigator)</p>
+<p>
+Please ask any questions in <a href="http://forum.kerbalspaceprogram.com/threads/65747-0-23-Hangar-Extender">the forum thread</a></p>
+    </li>	
+  </ul>
+  
 </section>
 
 </body>
