added legacy parts link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
   <br/>
   <ul class="tabs">
     <li><a href="https://github.com/snjo/Firespitter/releases">Pre-releases and older versions</a></li>
-	<li><a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">Source code</a></li>
+	<li><a href="https://github.com/snjo/Firespitter/releases/tag/legacy">Legacy parts</a></li>
+	<li><a href="https://github.com/snjo/Firespitter/tree/master/Firespitter">Source code</a></li>	
   </ul>
 
   <div class="spacer">&nbsp;</div>
